fix picture stretching

--- a/index.css
+++ b/index.css
@@ -12,7 +12,6 @@ html, body {
     background: black;
     color: white;
     font-family: 'Neucha', cursive;
-
     font-size: 0.95rem;
     letter-spacing: 0.1rem;
     background: rgb(51, 51, 51);
@@ -23,7 +22,6 @@ section {
     padding: 5%;
 }
 
-
 .title {
     font-size: 3rem;
     margin: 3% 5%;
@@ -31,27 +29,29 @@ section {
 }
 
 .fade-in {
-	opacity: 1;
-	animation-name: fadeInOpacity;
-	animation-iteration-count: 1;
-	animation-timing-function: ease-in;
-	animation-duration: 2s;
+    opacity: 1;
+    animation-name: fadeInOpacity;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration: 2s;
 }
 
 @keyframes fadeInOpacity {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
+
 /* header font fantasy */
 
 /* landing page styling(start) */
+
 #landing-page {
     height: 100vh;
-    transform: fa
+    transform: fade-in
 }
 
 .game-logo-lg {
@@ -74,7 +74,6 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 .story-card {
@@ -101,6 +100,7 @@ section {
 .top-right h3 {
     border-bottom: white solid 2px;
 }
+
 /* story page styling(end) */
 
 /* trailer page styling(start) */
@@ -159,10 +159,10 @@ section {
     background: inherit;
     min-width: 250px;
 }
+
 .character-profile img {
     width: 100%;
     border-radius: 10px;
-
 }
 
 .character-description {
@@ -187,7 +187,10 @@ section {
 
 .character-sprites img {
     max-width: 150px;
+    height: 150px;
+
 }
+
 /* characters page styling(end) */
 
 /* gameplay page styling(start) */
@@ -196,7 +199,6 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
 
 .gameplay-details {
@@ -208,6 +210,7 @@ section {
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.5);
 }
+
 .gameplay-image img {
     width: 100%;
 }
@@ -220,6 +223,7 @@ section {
     margin-bottom: 3%;
     border-bottom: white solid 2px;
 }
+
 /* gameplay page styling(end) */
 
 /* artwork page styling(start) */
@@ -232,19 +236,26 @@ section {
     padding: 3% 5%;
 }
 
-
 .artworks {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
+
 .artworks img {
     display: inline-block;
     width: 40%;
+    height: 388px;
     border-radius: 10px;
     margin: 3% 0;
+    max-width: 690px;
+    
+
 }
+
+
+
 /* artwork page styling(end) */
 
 /* contributors(start) */
